--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "stable",
     "autoload": {
-        "psr-4": {"w1575\\ConsoleColor": "src/"}
+        "psr-4": {"w1575\\ConsoleColor\\": "src/"}
     },
     "require": {}
 }
