--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "name": "w1575/console-color",
-    "version": 0.1,
     "description": "Console with color themes :)",
     "type": "library",
     "license": "MIT",
@@ -12,7 +11,7 @@
     ],
     "minimum-stability": "stable",
     "autoload": {
-        "psr-4": {"w1575\\": "src/"}
+        "psr-4": {"w1575\\ConsoleColor\\": "src/"}
     },
     "require": {}
 }
